# fauxgen

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  rustfmt.toml
examples/: chained.rs  fibonacci.rs  generic.rs  inline.rs
macros/: Cargo.toml
macros/src/: args.rs  generator.rs  lib.rs  lifetime.rs
src/: async.rs  asynk.rs  common.rs  core.rs  impls.rs  iter.rs  lib.rs  noop.rs  stream.rs  sync.rs  token.rs  waker.rs
src/detail/: future.rs  mod.rs  token.rs  util.rs  waker.rs  wrapper.rs
src/export/: async.rs  mod.rs  sync.rs
tests/: async.rs  basic.rs  inline.rs  nested.rs  trybuild.rs  yield.rs
tests/ui/: duplicate-param.stderr  unknown-param.rs  unknown-param.stderr
tests/ui/fail/: duplicate-param.rs  duplicate-param.stderr  unknown-param.stderr  unknown-return-type.rs  unknown-return-type.stderr  wrong-arg-type.rs  wrong-arg-type.stderr  wrong-unit-yield-type.rs  wrong-unit-yield-type.stderr  wrong-yield-type.stderr
tests/ui/nightly/: fail-wrong-yield-type-empty.rs  fail-wrong-yield-type-empty.stderr  fail-wrong-yield-type.rs  fail-wrong-yield-type.stderr  fail-yield-in-macro-expr.rs  fail-yield-in-macro-expr.stderr  fail-yield-in-macro-stmt.rs  fail-yield-in-macro-stmt.stderr  pass-yield-empty.rs  pass-yield-nested-real-gen.rs  pass-yield-syntax.rs
tests/ui/pass/: all-params.rs  elided-arg-lifetime.rs  elided-return-lifetime.rs  elided-yield-lifetime.rs  impl-trait.rs
tests/ui/stable/: fail-wrong-yield-type.rs  fail-wrong-yield-type.stderr
tests/yield/: inner.rs
