[workspace]
members = [
    ".",
    "macros",
]

[package]
name = "fauxgen"
version = "0.1.0"
edition = "2021"

[features]
default = [ "macros" ]

macros = [ "dep:fauxgen-macros" ]
std-generators = []

[dependencies]
futures-core = "0.3"
fauxgen-macros = { version = "0.1.0", path = "macros", optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
futures-util = "0.3.28"
pin-project = "1.1.0"
tokio = { version = "1.0", features = [ "test-util", "macros", "time" ] }
trybuild = "1.0.80"

[profile.release]
lto = "fat"

[profile.dev.build-override]
debug = true
