[package]
name = "fauxgen"
version = "0.1.0"
edition = "2021"

[features]
std-generators = []

[dependencies]
futures-core = "0.3.28"
fauxgen-macros = { path = "macros" }

[workspace]
members = [
    ".",
    "macros",
]

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
tokio = { version = "1.0", features = [ "test-util", "macros" ] }
