[workspace]
members = [
    ".",
    "macros",
]
package.version = "0.1.4"

[package]
name = "fauxgen"
version = { workspace = true }
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Sean Lynch <sean@lynches.ca>" ]
description   = "write your own generators in stable rust"
documentation = "https://docs.rs/fauxgen"
repository    = "https://github.com/phantomical/fauxgen"
homepage      = "https://github.com/phantomical/fauxgen"
exclude = [
    "/macros",
    "/.cargo"
]

[features]
default = [ "macros" ]
macros = [ "dep:fauxgen-macros" ]

[dependencies]
futures-core = "0.3"
fauxgen-macros = { version = "=0.1.4", path = "macros", optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
futures-util = "0.3.28"
pin-project = "1.1.0"
tokio = { version = "1.0", features = [ "test-util", "macros", "time" ] }
trybuild = "1.0.80"

[profile.release]
lto = "fat"

[profile.dev.build-override]
debug = true
