[package]
name = "fauxgen-macros"
version = { workspace = true }
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Sean Lynch <sean@lynches.ca>" ]
description   = "macro support package for fauxgen"
documentation = "https://docs.rs/fauxgen"
repository    = "https://github.com/phantomical/fauxgen"
homepage      = "https://github.com/phantomical/fauxgen"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }
