[package]
name = "fauxgen-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
authors = [ "Sean Lynch <sean@lynches.ca>" ]
description   = "macro support package for fauxgen"
documentation = "https://docs.rs/fauxgen"
repository    = "https://github.com/phantomical/fauxgen"
homepage      = "https://github.com/phantomical/fauxgen"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.44" # version that started supporting raw lifetimes syntax
syn = { version = "2.0", features = ["full", "visit-mut"] }
